<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.laura.quiz.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                style="@style/QuestionHeaderText"
                android:text="@string/question1"/>

            <TextView
                style="@style/QuestionText"
                android:text="@string/question1_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/q1a1"
                        style="@style/AnswerText"
                        android:text="@string/q1a1"
                        android:onClick="clickLogic1" />
                    <RadioButton
                        android:id="@+id/q1a2"
                        style="@style/AnswerText"
                        android:text="@string/q1a2"
                        android:onClick="clickLogic1" />
                </RadioGroup>
                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/q1a3"
                        style="@style/AnswerText"
                        android:text="@string/q1a3"
                        android:onClick="clickLogic1" />
                    <RadioButton
                        android:id="@+id/q1a4"
                        style="@style/AnswerText"
                        android:text="@string/q1a4"
                        android:onClick="clickLogic1" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                style="@style/QuestionHeaderText"
                android:text="@string/question2"/>

            <TextView
                style="@style/QuestionText"
                android:text="@string/question2_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/q2a1"
                    style="@style/AnswerText"
                    android:text="@string/q2a1"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/q2a3"
                    style="@style/AnswerText"
                    android:text="@string/q2a3"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/q2a2"
                    style="@style/AnswerText"
                    android:text="@string/q2a2"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/q2a4"
                    style="@style/AnswerText"
                    android:text="@string/q2a4"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                style="@style/QuestionHeaderText"
                android:text="@string/question3"/>

            <TextView
                style="@style/QuestionText"
                android:text="@string/question3_text"/>

            <EditText
                android:id="@+id/q3a0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/QuestionHeaderText"
                android:text="@string/question4"/>

            <TextView
                style="@style/QuestionText"
                android:text="@string/question4_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/q4a1"
                    style="@style/AnswerText"
                    android:text="@string/q4a1"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/q4a3"
                    style="@style/AnswerText"
                    android:text="@string/q4a3"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/q4a2"
                    style="@style/AnswerText"
                    android:text="@string/q4a2"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/q4a4"
                    style="@style/AnswerText"
                    android:text="@string/q4a4"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                style="@style/QuestionHeaderText"
                android:text="@string/question5"/>

            <TextView
                style="@style/QuestionText"
                android:text="@string/question5_text"/>

            <EditText
                android:id="@+id/q5a0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <TextView
                style="@style/QuestionHeaderText"
                android:text="@string/question6"/>

            <TextView
                style="@style/QuestionText"
                android:text="@string/question6_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/q6a1"
                        style="@style/AnswerText"
                        android:text="@string/q6a1"
                        android:onClick="clickLogic6" />
                    <RadioButton
                        android:id="@+id/q6a2"
                        style="@style/AnswerText"
                        android:text="@string/q6a2"
                        android:onClick="clickLogic6" />
                </RadioGroup>
                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/q6a3"
                        style="@style/AnswerText"
                        android:text="@string/q6a3"
                        android:onClick="clickLogic6" />
                    <RadioButton
                        android:id="@+id/q6a4"
                        style="@style/AnswerText"
                        android:text="@string/q6a4"
                        android:onClick="clickLogic6" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:text="@string/submit"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="submit"/>

</LinearLayout>
